# docs

./: CLAUDE.md  RESUME.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
plans/: 2026-06-19-slice-1-foundations.md  2026-06-20-slice-2-context.md  2026-06-20-slice-3-rules-review.md  2026-06-20-slice-4-evidence.md  2026-06-20-slice-5-sections.md  2026-06-21-slice-6-pipeline.md  2026-06-21-slice-7-collection.md  2026-06-21-slice-8-section-rendering.md  2026-06-21-slice-9-context-packing-assets.md  2026-06-22-slice-10-format-audit-docx.md  2026-06-22-slice-11-docx-assembly.md  2026-06-30-slice-11b-docx-layout-toc.md  2026-07-01-slice-12-qa-pdf-rendering.md  2026-07-01-slice-13-doctor-corrections.md  2026-07-01-slice-14-pipeline-run-logging.md  2026-07-01-slice-15-cli-surface.md  2026-07-02-slice-16-tech-debt-remediation.md  2026-07-04-slice-17-build-sections.md  roadmap.md
specs/: 2026-06-19-harness-migration-hexagonal-design.md  2026-07-04-slice-17-build-sections-design.md
tests/integration/: test_asset_service.py  test_cli_asset.py  test_cli_collection.py  test_cli_composition_root.py  test_cli_context.py  test_cli_core.py  test_cli_doc.py  test_cli_docx.py  test_cli_section.py  test_cli_template.py  test_collection_service.py  test_context_pack_service.py  test_context_service.py  test_corrections_service.py  test_deps_ingest_wiring.py  test_doctor_service.py  test_document_service.py  test_documento_generico_acceptance.py  test_docx_assembly_service.py  test_docx_zip_determinism.py  test_ensure_bullet_numbering_part.py  test_json_repository.py  (+20 more)
(+179 files in other folders)
