[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "docxcompose>=2.2.0",
    "filetype>=1.2.0",
    "opendataloader-pdf>=2.4.7",
    "pydantic>=2.13.4",
    "python-docx>=1.2.0",
    "typer>=0.26.8",
]

[project.scripts]
docs = "docs.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
